syntax = "proto3";

service BatcherRPC {
    rpc ReceiveRecord (RPCRecord) returns (RPCReply) {}
    rpc ReceiveRecords (RPCRecords) returns (RPCReply) {}
    rpc UpdateQueue (RPCQueues) returns (RPCReply) {}
    rpc TOIDReceiveRecord (RPCRecord) returns (RPCReply) {}
    rpc TOIDReceiveRecords (RPCRecords) returns (RPCReply) {}
    rpc TOIDUpdateQueue (RPCQueues) returns (RPCReply) {}
}

message RPCRecord {
    string id = 1;
    int64 timestamp = 2;
    uint32 host = 3;
    int64 seqid = 4;
    uint32 depth = 5;
    map<string, string> tags = 6;
    string trace = 7;
    // for TOID record
    uint32 lid = 8;
    uint32 toid = 9;
    RPCCausality causality = 10;
}

message RPCCausality {
	uint32 host = 1;
	uint32 toid = 2;
}

message RPCRecords {
    repeated RPCRecord records = 1;
}

message RPCReply {
    string message = 1;
}

message RPCQueues {
    uint32 version = 1;
    repeated string queues = 2;
}